# rabbit-connector

./: README.md  pyproject.toml
examples/: consumer.py  producer.py
rabbit_connector/: __init__.py  client.py
